# kochmorse

./: CMakeLists.txt  ChangeLog  KochMorse.pro  README.md  resources.qrc  snapcraft.yaml
chat/: chat.xml
cmake/: FindPortAudio.cmake  InstallHeadersWithDirectory.cmake  mingw32.cmake
qso/: callsigns.xml  chat-closing.xml  chat-cq-response.xml  chat-init.xml  chat-ragchew.xml  chat-response.xml  dxcc-4o.xml  dxcc-9a.xml  dxcc-ct.xml  dxcc-dl.xml  dxcc-e7.xml  dxcc-ea.xml  dxcc-ei.xml  dxcc-f.xml  dxcc-g.xml  dxcc-gi.xml  dxcc-gm.xml  dxcc-gw.xml  dxcc-ha.xml  dxcc-hb.xml  dxcc-i.xml  dxcc-ie.xml  dxcc-is0.xml  dxcc-la.xml  dxcc-lx.xml  dxcc-oe.xml  dxcc-ok.xml  dxcc-om.xml  dxcc-on.xml  dxcc-pa.xml  dxcc-s5.xml  dxcc-sm.xml  dxcc-sp.xml  dxcc-sv.xml  dxcc-yu.xml  dxcc-z3.xml  dxcc-z6.xml  dxcc-za.xml  dxcc.xml  qcodes.xml  (+9 more)
shared/: kochmorse.desktop  kochmorse_de.qm  kochmorse_de.ts  kochmorse_en.ts  kochmorse_es.qm  kochmorse_es.ts  kochmorse_fi.ts  kochmorse_fr.qm  kochmorse_fr.ts  kochmorse_it.ts  kochmorse_pt.ts  kochmorse_ru.ts
src/: CMakeLists.txt  aboutdialog.cc  aboutdialog.hh  application.cc  application.hh  audiosink.cc  audiosink.hh  checkupdate.cc  checkupdate.hh  colorbutton.cc  colorbutton.hh  config.h.in  decoder_test.cc  decoderwindow.cc  decoderwindow.hh  effect.cc  effect.hh  globals.cc  globals.hh  highscore.cc  highscore.hh  kochmorse_decoder.cc  listwidget.cc  listwidget.hh  main.cc  mainwindow.cc  mainwindow.hh  morsedecoder.cc  morsedecoder.hh  morseencoder.cc  morseencoder.hh  qhal.cc  qhal.hh  qrm.cc  qrm.hh  qsochat.cc  qsochat.hh  qsochat_cli.cc  ringbuffer.cc  ringbuffer.hh  (+11 more)
text/: about.html  contributors.html
